--- a/html/index.html
+++ b/html/index.html
@@ -28,8 +28,6 @@
         <div class="recordar">¿Olvidaste tu contraseña?</div>
 
     </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1"></script> -->
-    <script type="module" src="./app.js"></script>
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script type="module" src="../javaScript/app.js"></script>
 </body>
 </html>
