--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <div class="recordar">¿Olvidaste tu contraseña?</div>
 
     </div>
-    <script type="module" src="../javaScript/app.js"></script>
+    <script type="module" src="../js/app.js"></script>
 </body>
 </html>
