--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="formulario" class="formulario">
         <h1>Bienvenido</h1>
-        <form method="post">
+        <form method="get">
             <div id="emailDiv" class="username">
                 <input type="email" id="email" required>
                 <label class="lbl">Email</label>
