Realizacion de cambios

--- a/pagina-agregar.html
+++ b/pagina-agregar.html
@@ -60,7 +60,7 @@
             <form>
                 <div class="form-group">
                     <span>Marca</span>
-                    <select class="caja">
+                    <select>
                         <option>Chevrolet</option>
                         <option>Toyota</option>
                         <option>Subaru</option>
