Cambios en mensajes de error y exito

--- a/pagina-agregar.html
+++ b/pagina-agregar.html
@@ -61,7 +61,7 @@
             <form id = "formulario">
                 <div class="form-group">
                     <span>Marca</span>
-                    <select>
+                    <select class = "caja">
                         <option>Chevrolet</option>
                         <option>Toyota</option>
                         <option>Subaru</option>
@@ -98,7 +98,7 @@
 
                 <div class="form-group">
                     <span>Tipo de repuesto</span>
-                    <select>
+                    <select class = "caja">
                         <option>Transmicion</option>
                         <option>Motor</option>
                         <option>Suspencion</option>
@@ -114,16 +114,15 @@
                 </div>
 
                 <div id="boton">
-                    <button type="submit">Guardar</button>
+                    <button type="submit" value="Guardar">Guardar</button>
                     <style>
                         .estilo-alerta {
-                            color: white;
+                            color: #212529;
                             background-color: rgba(12, 200, 68, 0.884);
-                            font-weight: bold;
-                            font-size: 16px;
-                            text-align: center;
-                            justify-content: center;
-                            border-radius: 5px;
+                            font-weight:bold;
+                            font-size: 18px;
+                            text-align:center;
+                            border-radius:5px;
                             
                         }
                     </style>
