Cambios en el select de modelo

--- a/pagina-buscar.html
+++ b/pagina-buscar.html
@@ -84,14 +84,16 @@
 
     <!--Date desde-->
                 <div class="form-group">
-                    <span>Modelo desde</span>
-                    <input type="date" id="start">
+                    <span>Modelo</span>
+                    <select class="year" id="year">
+                        <option value="">Seleccione</option>
+                    </select>
                 </div>
-    <!--Date hasta-->
+    <!--Date hasta
                 <div class="form-group">
                     <span>Modelo hasta</span>
                     <input type="date" id="start">
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <span>Tipo de repuesto</span>
@@ -129,7 +131,7 @@
     
 
 
-
+    <script type="module" src="/js/pagina-buscar.js"></script>
     
 </body>
 </html>
