--- a/pagina-agregar.html
+++ b/pagina-agregar.html
@@ -85,15 +85,19 @@
                     </style>
                 </div>
 
-    <!--Date desde-->
+    <!--año desde-->
                 <div class="form-group">
-                    <span>Modelo desde</span>
-                    <input type="date" id="modelo" >
+                    <span>Modelo Desde</span>
+                    <select class="caja" id="year">
+                        <option value="">Seleccione</option>
+                    </select>
                 </div>
-    <!--Date hasta-->
+    <!--año hasta-->
                 <div class="form-group">
                     <span>Modelo hasta</span>
-                    <input type="date" id="modelo">
+                    <select class="caja" id="year">
+                        <option value="">Seleccione</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
